--- a/src/app/pages/member/pay-weighing-fee/pay-weighing-fee.page.scss
+++ b/src/app/pages/member/pay-weighing-fee/pay-weighing-fee.page.scss
@@ -1,3 +1,18 @@
 h1{
     margin: 10px;
 }
+h2{
+    text-align: center;
+}
+a{
+    text-decoration: underline;
+}
+ion-list{
+    margin-bottom: 10px;
+}
+.paid{
+    color: #28ba62;
+}
+.nopay{
+    color: #eb445a;
+}
