--- a/src/app/pages/member/pay-weighing-fee/pay-weighing-fee.page.html
+++ b/src/app/pages/member/pay-weighing-fee/pay-weighing-fee.page.html
@@ -6,18 +6,19 @@
 <ion-content>
   <ion-text color="danger" *ngIf="weights.length==0;else showList">
     <h1>{{showMsg}}</h1>
-    
+
   </ion-text>
   <ng-template #showList>
     <ion-list *ngFor="let item of weights">
       <ion-item>
-        重量：{{item.GrossWeight}}{{item.UnitOfWeight}}
+        <ion-label>车号:{{item.VehicleNo}}</ion-label>
+        <ion-note slot="end" class="weight">净重:{{item.NetWeight}}{{item.UnitOfWeight}}</ion-note>
       </ion-item>
       <ion-item detail (click)="detail(item.ObjectId)">
         <ion-label>
-          <p>测量时间：{{item.WeightingDate}}</p>
-          <p>支付状态：<span [ngClass]="{'paid':item.Status==2,'nopay':item.Status!=2}"> {{item.Status==2?'已支付':'未支付'}}</span></p>
-          <p>车牌号码：{{(item.VehicleNo==null || item.VehicleNo.length==0)?'(未填写)':item.VehicleNo}}</p>
+          <p>毛重:{{item.GrossWeight}}{{item.UnitOfWeight}}</p>
+          <p>皮重:{{item.TareWeight}}{{item.UnitOfWeight}}</p>
+          <p>测量时间:{{item.WeightingDate}}</p>
         </ion-label>
       </ion-item>
     </ion-list>
