--- a/src/app/pages/member/pay-weighing-fee-detail/pay-weighing-fee-detail.page.html
+++ b/src/app/pages/member/pay-weighing-fee-detail/pay-weighing-fee-detail.page.html
@@ -32,6 +32,11 @@
         inputmode="decimal" readonly="{{weightBill.Status!=0}}" autofocus="true" placeholder="请输入皮重">
       </ion-input>
     </ion-item>
+    <ion-item *ngIf="weightBill.Status==0">
+      <ion-label class="ion-text-wrap">
+        皮重默认为您上一次称重的重量，您可以根据实际情况修改
+      </ion-label>
+    </ion-item>
     <ion-item *ngIf="weightBill.Status==2">
       <ion-label>净重</ion-label>
       <ion-input type="number" [(ngModel)]="weightBill.NetWeight" readonly>
