--- a/src/app/pages/member/pay-weighing-fee-detail/pay-weighing-fee-detail.page.html
+++ b/src/app/pages/member/pay-weighing-fee-detail/pay-weighing-fee-detail.page.html
@@ -31,6 +31,9 @@
       <ion-input type="number" [(ngModel)]="weightBill.TareWeight" (ionChange)="inputTareWeight($event)"
         inputmode="decimal" readonly="{{weightBill.Status!=0}}" autofocus="true" placeholder="请输入皮重">
       </ion-input>
+      <ion-label class="ion-text-wrap" color="danger" *ngIf="this.weightBill.NetWeight<0">
+        皮重不能大于毛重！
+      </ion-label>
     </ion-item>
     <ion-item *ngIf="weightBill.Status==0">
       <ion-label class="ion-text-wrap">
@@ -51,6 +54,6 @@
       <a [href]="downloadLink">下载磅单文件</a>
     </ion-item>
   </ion-list>
-  <ion-button expand="block" class="pay-button" (click)="payAndPrint()" *ngIf="weightBill.Status!=2">{{buttonText}}</ion-button>
+  <ion-button expand="block" class="pay-button" (click)="payAndPrint()" *ngIf="weightBill.Status!=2" disabled="{{this.weightBill.NetWeight<0}}">{{buttonText}}</ion-button>
 </ion-content>
 
