重置密码添加邮箱找回

--- a/src/app/pages/member/reset-password/reset-password.page.html
+++ b/src/app/pages/member/reset-password/reset-password.page.html
@@ -26,8 +26,8 @@
         <form (ngSubmit)="doNext2(myForm2.value)"  [formGroup]="myForm2" novalidate>
       
             <ion-item>
-              <ion-label stacked>手机号码</ion-label>
-              <ion-input type="text" formControlName="mobile" placeholder="请输入您在我公司开户时留存的手机号码"></ion-input>
+              <ion-label stacked>手机号码/邮箱</ion-label>
+              <ion-input type="text" formControlName="mobile" placeholder="请输入您在我公司开户时留存的手机号码/邮箱"></ion-input>
             </ion-item>
             <div class="validation-errors" padding-left>
               <div *ngFor="let validation of validation_messages.mobile">
