--- a/src/app/pages/member/pay-weighing-fee/pay-weighing-fee.page.scss
+++ b/src/app/pages/member/pay-weighing-fee/pay-weighing-fee.page.scss
@@ -19,3 +19,13 @@ ion-list{
 .weight{
     color: black !important;
 }
+.error-message
+{
+  color: red;
+}
+.validation-errors{
+    background-color: white;
+}
+.button-small{
+    margin-inline: 1px !important;
+}
