--- a/src/app/pages/member/pay-weighing-fee-result/pay-weighing-fee-result.page.html
+++ b/src/app/pages/member/pay-weighing-fee-result/pay-weighing-fee-result.page.html
@@ -1,19 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>操作成功</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>磅单</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-text class="tips" color="success">
-    <h1>支付成功！</h1>
-    <p>
-      现在可前往门卫处打印磅单
-    </p>
-    <p>
-      或者
-    </p>
-    <p>
-      <a [href]="downloadLink">点击此处</a>下载磅单文件
-    </p>
-  </ion-text>
+  <ion-img src="{{imageUrl}}"></ion-img>
 </ion-content>
