--- a/src/app/pages/member/pay-weighing-fee/pay-weighing-fee.page.html
+++ b/src/app/pages/member/pay-weighing-fee/pay-weighing-fee.page.html
@@ -22,14 +22,14 @@
       <ion-list>
         <ion-item>
           <ion-label>车牌号码*</ion-label>
-          <ion-input type="text" value="" placeholder="请输入车牌号码" formControlName="vehicleNo" [(ngModel)]="data.VehicleNo"
-            (ionChange)="vehicleNoChange($event)"></ion-input>
+          <ion-input type="text" value="" placeholder="请输入或者点击下方链接选择" formControlName="vehicleNo" [(ngModel)]="data.VehicleNo"
+            (ionChange)="vehicleNoChange($event)" (ionFocus)="vehicleNoFocus($event)" autofocus="true" #vehicleNoInput></ion-input>
         
         </ion-item>
         <ion-item>
           <ion-label></ion-label>
           <ion-button color="primary" size="small" slot="end" fill="clear" (click)="showHistoryVehicleNo()">历史记录</ion-button>
-          <ion-button color="secondary" size="small" slot="end" fill="clear" (click)="showInParkVehicleNo()">入场记录</ion-button>
+          <ion-button color="secondary" size="small" slot="end" fill="clear" (click)="showInParkVehicleNo(true)">入场记录</ion-button>
         </ion-item>
         <div class="validation-errors ion-padding-start">
           <div *ngFor="let validation of validation_messages.vehicleNo">
@@ -42,8 +42,8 @@
           </div>
         </div>
         <ion-item [ngClass]="tab==2 ? 'ion-hide' : ''">
-          <ion-label>皮重(车重)*</ion-label>
-          <ion-input type="number" value="" placeholder="请输入皮重(车重)" formControlName="tareWeight"
+          <ion-label>皮重(车重)KG*</ion-label>
+          <ion-input type="number" value="" placeholder="请输入皮重(车重),单位KG" formControlName="tareWeight"
             [(ngModel)]="data.TareWeight"></ion-input>
         </ion-item>
 
