--- a/src/app/pages/member/wechat-pay/wechat-pay.page.html
+++ b/src/app/pages/member/wechat-pay/wechat-pay.page.html
@@ -45,7 +45,7 @@
 
     <ion-item>
       <ion-label>产品类型</ion-label>
-      <ion-select interface="popover" placeholder="请选择产品类型" (ionChange)="typeChange($event)" value="0">
+      <ion-select interface="alert" cancelText="取消" okText="确定" placeholder="请选择产品类型" (ionChange)="typeChange($event)" value="0">
         <ion-select-option *ngFor="let item of productTypes" value="{{item.Key}}">{{item.Value}}</ion-select-option>
       </ion-select>
     </ion-item>
