添加跳转到小程序测试页

--- a/src/app/pages/member/problem-detail/problem-detail.page.html
+++ b/src/app/pages/member/problem-detail/problem-detail.page.html
@@ -182,3 +182,12 @@
     <ion-button *ngIf="data?.Problem?.Status==0" expand="full" (click)="chat()">联系客服</ion-button>
   </ion-footer>
 </ng-template>
+
+<div id="wxOpenLaunchWeApp">
+  <!-- <wx-open-launch-weapp id="launch-btn" appid="wx7e62e243bc29cc8a" path="pages/logon/index">
+    <template>
+      <style>.btn { padding: 12px }</style>
+      <button class="btn">打开小程序</button>
+    </template></wx-open-launch-weapp> -->
+</div>
+
