--- a/src/app/pages/member/pay-weighing-fee/pay-weighing-fee.page.html
+++ b/src/app/pages/member/pay-weighing-fee/pay-weighing-fee.page.html
@@ -12,11 +12,11 @@
 
 <ion-content>
   <div *ngIf="isMiniProgram==false">
-    <ion-card >
+    <ion-card>
       <ion-card-header>
         <ion-card-title>系统已迁移到小程序</ion-card-title>
       </ion-card-header>
-    
+
       <ion-card-content>
         尊贵的客户，现过磅系统升级为微信小程序，可在微信下拉快速打开过磅小程序，无需下车完成过磅。我们将持续优化升级，为您提供更方便、更快捷的服务！
       </ion-card-content>
@@ -33,73 +33,82 @@
     </ion-segment>
     <div class="ion-padding-top">
       <form [formGroup]="weightBillForm1" novalidate>
-        <ion-list>
-          <ion-item>
-            <ion-label>车牌号码*</ion-label>
-            <ion-input type="text" value="" placeholder="请输入或者点击下方链接选择" formControlName="vehicleNo" [(ngModel)]="data.VehicleNo"
-              (ionChange)="vehicleNoChange($event)" (ionFocus)="vehicleNoFocus($event)" autofocus="true" #vehicleNoInput></ion-input>
-          
-          </ion-item>
-          <ion-item>
-            <ion-label>车牌快捷选择</ion-label>
-            <ion-button color="primary" size="small" slot="end" fill="clear" (click)="showHistoryVehicleNo()">历史记录</ion-button>
-            <ion-button color="secondary" size="small" slot="end" fill="clear" (click)="showInParkVehicleNo(true)">入场记录</ion-button>
-          </ion-item>
-          <div class="validation-errors ion-padding-start">
-            <div *ngFor="let validation of validation_messages.vehicleNo">
-              <ng-container>
-                <div class="error-message"
-                  *ngIf="weightBillForm1.get('vehicleNo').hasError(validation.type) && (weightBillForm1.get('vehicleNo').dirty || weightBillForm1.get('vehicleNo').touched)">
-                  {{validation.message}}
-                </div>
-              </ng-container>
+        <ion-card>
+          <ion-list lines="none">
+            <ion-item>
+              <ion-label>车牌号码*</ion-label>
+              <ion-input type="text" value="" placeholder="请输入或者点击下方链接选择" formControlName="vehicleNo"
+                [(ngModel)]="data.VehicleNo" (ionChange)="vehicleNoChange($event)" (ionFocus)="vehicleNoFocus($event)"
+                autofocus="true" #vehicleNoInput></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label part="no-border">车牌快捷选择</ion-label>
+              <ion-button color="primary" size="small" slot="end" fill="clear"
+                (click)="showHistoryVehicleNo()">历史记录</ion-button>
+              <ion-button color="secondary" size="small" slot="end" fill="clear"
+                (click)="showInParkVehicleNo(true)">入场记录</ion-button>
+            </ion-item>
+          </ion-list>
+        </ion-card>
+        <ion-card>
+          <ion-list lines="none">
+
+            <div class="validation-errors ion-padding-start">
+              <div *ngFor="let validation of validation_messages.vehicleNo">
+                <ng-container>
+                  <div class="error-message"
+                    *ngIf="weightBillForm1.get('vehicleNo').hasError(validation.type) && (weightBillForm1.get('vehicleNo').dirty || weightBillForm1.get('vehicleNo').touched)">
+                    {{validation.message}}
+                  </div>
+                </ng-container>
+              </div>
             </div>
-          </div>
-          <ion-item [ngClass]="tab==2 ? 'ion-hide' : ''">
-            <ion-label>皮重(车重)KG*</ion-label>
-            <ion-input type="number" value="" placeholder="请输入皮重(车重),单位KG" formControlName="tareWeight"
-              [(ngModel)]="data.TareWeight"></ion-input>
-          </ion-item>
-  
-          <!-- <ion-item>
+            <ion-item>
+              <ion-label>企业账号</ion-label>
+              <ion-input type="text" value="" placeholder="无账号不需要输入" formControlName="corporateAccount"
+                [(ngModel)]="data.CorporateAccount"></ion-input>
+              <ion-button color="primary" size="small" slot="end" fill="clear"
+                (click)="showHistoryCorporateAccount()">历史记录</ion-button>
+            </ion-item>
+            <ion-item [ngClass]="tab==2 ? 'ion-hide' : ''">
+              <ion-label>皮重(车重)KG*</ion-label>
+              <ion-input type="number" value="" placeholder="请输入皮重(车重),单位KG" formControlName="tareWeight"
+                [(ngModel)]="data.TareWeight"></ion-input>
+            </ion-item>
+
+            <!-- <ion-item>
             <ion-label>过磅费</ion-label>
             <ion-input type="number" value="" placeholder="磅单上显示的金额，与实际收费无关" formControlName="weighingFee"
               [(ngModel)]="data.WeighingFee"></ion-input>
           </ion-item> -->
-          <ion-item>
-            <ion-label>磅费打印几元每吨</ion-label>
-            <ion-select interface="alert" formControlName="pricePerTon"  [(ngModel)]="data.PricePerTon" cancelText="取消" okText="确定">
-              <ion-select-option *ngFor="let item of prices" [value]="item.value" [selected]="item.value==0">{{item.text}}</ion-select-option>
-            </ion-select>
-          </ion-item>
-          <ion-item>
-            <ion-label>企业账号</ion-label>
-            <ion-input type="text" value="" placeholder="无账号不需要输入" formControlName="corporateAccount"
-              [(ngModel)]="data.CorporateAccount"></ion-input>
-          </ion-item>
-        </ion-list>
-  
+            <ion-item>
+              <ion-label>磅费打印14元/次或1元/吨</ion-label>
+              <ion-select interface="alert" formControlName="pricePerTon" [(ngModel)]="data.PricePerTon" cancelText="取消"
+                okText="确定">
+                <ion-select-option *ngFor="let item of prices" [value]="item.value"
+                  [selected]="item.value==0">{{item.text}}</ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-list>
+        </ion-card>
       </form>
     </div>
-  
-  
+
+
     <ion-card>
       <ion-card-header>
         <ion-card-title>温馨提示</ion-card-title>
       </ion-card-header>
-  
+
       <ion-card-content>
-        <p>1、请确保车辆完全在磅上；</p>
-        <p>2、测量时请确保车辆静止，人员请勿在磅上走动；</p>
-        <p>3、过磅结束后，您可以查看电子榜单，同时纸质榜单 将打印在园区门口保安室。</p>
-        <p>4、收费规则：港车15元/次，其他其他车辆按含车重量，1元/吨最低15元/次。</p>
-        <p>5、有疑问请致电：18148566788</p>
+        <p>1、过磅结束后，您可以查看电子榜单，同时纸质榜单 将打印在园区门口保安室。</p>
+        <p>2、收费规则：港车14元/次，其他其他车辆按含车重量，1元/吨最低14元/次。</p>
+        <p>3、有疑问请致电：18148566788</p>
       </ion-card-content>
     </ion-card>
   </div>
-  
+
 </ion-content>
 <ion-footer *ngIf="isMiniProgram">
   <ion-button expand="full" (click)="start()" [disabled]="!signalRConnected">开始称重</ion-button>
 </ion-footer>
-
