--- a/src/app/pages/member/pay-weighing-fee-result/pay-weighing-fee-result.page.html
+++ b/src/app/pages/member/pay-weighing-fee-result/pay-weighing-fee-result.page.html
@@ -7,5 +7,5 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-img src="{{imageUrl}}"></ion-img>
+  <ion-img src="{{imageUrl}}" class="ion-margin"></ion-img>
 </ion-content>
