一些细节完善

--- a/src/app/pages/member/reset-password/reset-password.page.html
+++ b/src/app/pages/member/reset-password/reset-password.page.html
@@ -52,7 +52,7 @@
                 </ng-container>
               </div>
             </div>
-            <ion-button  expand="full" type="submit" [disabled]="!myForm2.valid" (click)="doSubmit()">下一步</ion-button>
+            <ion-button  expand="full" type="submit" [disabled]="!myForm2.valid">下一步</ion-button>
           </form>
         
     </div>
