--- a/src/app/pages/member/wechat-pay/wechat-pay.page.html
+++ b/src/app/pages/member/wechat-pay/wechat-pay.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>微信支付</ion-title>
+    <ion-title>微信支付({{data?.CustomerName}})</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="payHistory()">
         支付记录
