--- a/src/app/pages/member/bank-slips/bank-slips.page.html
+++ b/src/app/pages/member/bank-slips/bank-slips.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>回单上传</ion-title>
+    <ion-title>银行水单上传</ion-title>
   </ion-toolbar>
 </ion-header>
 
