--- a/src/app/pages/member/weight-bill-list/weight-bill-list.page.html
+++ b/src/app/pages/member/weight-bill-list/weight-bill-list.page.html
@@ -15,10 +15,13 @@
   <ng-template #showList>
     <ion-list *ngFor="let item of weights">
       <ion-item>
-        <ion-label>车号:{{item.VehicleNo}}</ion-label>
-        <ion-note slot="end" class="weight">净重:{{item.NetWeight}}{{item.UnitOfWeight}}</ion-note>
+        <ion-label>
+          <h3>车号:{{item.VehicleNo}}</h3>
+          <p>净重:{{item.NetWeight}}{{item.UnitOfWeight}}</p>
+        </ion-label>
+        <ion-button fill="outline" slot="end" (click)="print(item.ObjectId)">打印磅单</ion-button>
       </ion-item>
-      <ion-item detail (click)="detail(item.ObjectId)">
+      <ion-item detail (click)="detail(item.ObjectId)" lines="none">
         <ion-label>
           <p>毛重:{{item.GrossWeight}}{{item.UnitOfWeight}}</p>
           <p>皮重:{{item.TareWeight}}{{item.UnitOfWeight}}</p>
